@@ -1,4 +1,30 @@
-DaViz Product
-================================
+=========
+EEA Daviz
+=========
+`EEA Daviz`_ is a web tool developed by the European Environment Agency which
+helps creating interactive data visualizations easily through the web
+browser, no extra tools are necessary. It is free and open source.
 
-  DaViz - Data Visualization
+
+.. contents::
+
+
+Installation
+============
+
+* Go to admin > Site Setup > Add-ons
+* Activate EEA Daviz
+
+
+Usage
+=====
+
+* Within your working Folder add a Daviz Visualization
+
+
+Authors
+=======
+
+"European Environment Agency", mailto:webadmin@eea europa eu
+
+.. _`EEA Daviz`: http://eea.github.com/docs/eea.daviz
