@@ -5,6 +5,7 @@
   <includeDependencies package="." />
 
   <include file="profiles.zcml" />
+  <include file="permissions.zcml" />
 
   <include package=".browser" />
   <include package=".data" />
