@@ -1,30 +1,42 @@
-# -*- coding: utf-8 -*-
-""" Test doctests module
+""" Doc tests
 """
-__author__ = """European Environment Agency (EEA)"""
-__docformat__ = 'plaintext'
-__credits__ = """contributions: Alec Ghica, Alin Voinea"""
-
 import doctest
 import unittest
-from eea.daviz.tests.base import DavizFunctionalTestCase
-from Testing.ZopeTestCase import FunctionalDocFileSuite as Suite
+from eea.daviz.tests.base import FUNCTIONAL_TESTING
+from plone.testing import layered
 
 OPTIONFLAGS = (doctest.REPORT_ONLY_FIRST_FAILURE |
                doctest.ELLIPSIS |
                doctest.NORMALIZE_WHITESPACE)
 
-
 def test_suite():
     """ Suite
     """
-    return unittest.TestSuite((
-            Suite('docs/converter.txt',
-                  optionflags=OPTIONFLAGS,
-                  package='eea.daviz',
-                  test_class=DavizFunctionalTestCase),
-            Suite('docs/app.txt',
-                  optionflags=OPTIONFLAGS,
-                  package='eea.daviz',
-                  test_class=DavizFunctionalTestCase),
-    ))
+    suite = unittest.TestSuite()
+    suite.addTests([
+        layered(
+            doctest.DocFileSuite(
+                'data/source.py',
+                optionflags=OPTIONFLAGS,
+                package='eea.daviz'),
+            layer=FUNCTIONAL_TESTING),
+        layered(
+            doctest.DocFileSuite(
+                'README.txt',
+                optionflags=OPTIONFLAGS,
+                package='eea.daviz'),
+            layer=FUNCTIONAL_TESTING),
+        layered(
+            doctest.DocFileSuite(
+                'docs/converter.txt',
+                optionflags=OPTIONFLAGS,
+                package='eea.daviz'),
+            layer=FUNCTIONAL_TESTING),
+        layered(
+            doctest.DocFileSuite(
+                'docs/app.txt',
+                optionflags=OPTIONFLAGS,
+                package='eea.daviz'),
+            layer=FUNCTIONAL_TESTING),
+    ])
+    return suite
